<resources>
    <string name="app_name">GitHubRepoSearchApp</string>
    <string name="repo_search_edit_text_hint">Repository-search key words</string>
    <string name="ib_search_description">Start search button</string>
    <string name="double_dot">:</string>
    <string name="iv_star_description">Star</string>
    <string name="iv_fork_description">Fork</string>
    <string name="github_profile_link_text"><u>Go to GitHub Profile</u></string>
    <string name="github_repo_link_text"><u>Go to GitHub Repository</u></string>
    <string name="owner_text">Owner</string>
    <string name="repository_text">Repository</string>
    <string name="creating_date_text">Creating date:</string>
    <string name="last_update_text">Last update:</string>
    <string name="please_wait">Please Wait..</string>
    <string name="before_search_text">No results yet. Please search to see the repositories!</string>
    <string name="last_update_in_list_text">Last update</string>
    <string name="application_name">GitHub Search</string>
</resources>